@@ -4,4 +4,5 @@ data_raw/
 ^.*\.tex$
 figures_vignette/
 vignettes/patientProfilesVis-vignette.html
+vignettes/subjectProfile.pdf
 
