@@ -5,6 +5,8 @@ export(getLabelVar)
 export(getLabelVars)
 export(getNLinesYGgplot)
 export(getPathTemplate)
+export(getPatientColorPalette)
+export(getPatientShapePalette)
 export(knitPrintListPlotsKnitr)
 export(loadDataADaM)
 export(subjectProfileCombine)
@@ -17,6 +19,7 @@ importFrom(cowplot,ggdraw)
 importFrom(cowplot,plot_grid)
 importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,ggplot_build)
+importFrom(glpgStyle,glpgPaletteCharts)
 importFrom(haven,read_sas)
 importFrom(knitr,knit)
 importFrom(knitr,knit_expand)
@@ -25,3 +28,4 @@ importFrom(plyr,dlply)
 importFrom(reshape2,melt)
 importFrom(tools,file_path_sans_ext)
 importFrom(tools,texi2pdf)
+importFrom(viridis,viridis)
