@@ -55,3 +55,70 @@ getLabelVar <- function(var, data = NULL, labelVars = NULL){
 	}
 	return(res)
 }
+
+#' Get viridis color palette of specified length,
+#' either from a vector of names for the palette, or
+#' from a specified length.
+#' @param x vector with elements used as names for the palette.
+#' If factor, the levels are used, otherwise the unique elements of the vector.
+#' @param n number of elements in the palette
+#' @param type character with type of palette used:
+#' 'viridis' for color-blinded friendly palette or
+#' 'GLPG' for Galapagos color palette
+#' @return vector of viridis colors,
+#' named with the elements in \code{x} if \code{x} is specified.
+#' @author Laure Cougnaud
+#' @examples 
+#' getColorPalette(n = 10)
+#' getColorPalette(x = paste('treatment', 1:4))
+#' @importFrom viridis viridis
+#' @importFrom glpgStyle glpgPaletteCharts
+#' @export
+getPatientColorPalette <- function(n = NULL, x = NULL, type = c("GLPG", "viridis")){
+	
+	type <- match.arg(type)
+	
+	if(is.null(x) & is.null(n))
+		stop("A vector ('x') or number of colors ('n') ",
+			"should be specified.")
+	
+	x <- if(is.factor(x))	levels(x)	else unique(x)
+	if(is.null(n)) n <- length(x)
+	
+	palette <- switch(type,
+		'viridis' = viridis(n),
+		'GLPG' = rep(glpgPaletteCharts(), length.out = n)
+	)
+	
+	if(!is.null(x)) names(palette) <- x	else	palette <- unname(palette)
+	
+	return(palette)
+	
+}
+
+#' Get shape palette for \code{\link[plotly]{plotly}}
+#' 
+#' Note that 20 unique symbols are available at maximum.
+#' @inheritParams getPatientColorPalette
+#' @return vector of integer values with shape
+#' @author Laure Cougnaud
+#' @export
+getPatientShapePalette <- function(n = NULL, x = NULL){
+	
+	if(is.null(x) & is.null(n))
+		stop("A vector ('x') or number of colors ('n') ",
+			"should be specified.")
+	
+	x <- if(is.factor(x))	levels(x)	else unique(x)
+	
+	if(is.null(n)) n <- length(x)
+	
+	basePalette <- c(19, 15, 23:25, 1:14)
+	
+	palette <- rep(basePalette, length.out = n)
+	
+	if(!is.null(x)) names(palette) <- x	else	palette <- unname(palette)
+	
+	return(palette)
+	
+}
