@@ -2,6 +2,7 @@
 #' @param timeVar string, variable of \code{data} with time
 #' @param shapeVar string, variable of \code{data} for shape of the points
 #' @param shapeLab string, label for \code{shapeVar}
+#' @param shapePalette named vector with shape for \code{shapeVar}
 #' @inheritParams subjectProfileIntervalPlot
 #' @return list of \code{\link[ggplot2]{ggplot2} objects}, 
 #' also of class \code{subjectProfileTextPlot}
@@ -13,7 +14,9 @@ subjectProfileEventPlot <- function(
 	data,
 	paramVar, paramLab = getLabelVar(paramVar, labelVars = labelVars),
 	colorVar = NULL, colorLab = getLabelVar(colorVar, labelVars = labelVars),
+	colorPalette = if(!is.null(colorVar))	getPatientColorPalette(x = data[, colorVar]),
 	shapeVar = colorVar, shapeLab = getLabelVar(shapeVar, labelVars = labelVars),
+	shapePalette = if(!is.null(shapeVar))	getPatientShapePalette(x = data[, colorVar]),
 	timeVar, 
 	subjectVar = "USUBJID",
 	xLab = getLabelVar(timeVar, labelVars = labelVars),
@@ -32,7 +35,7 @@ subjectProfileEventPlot <- function(
 				
 		aesArgs <- c(
 			list(x = timeVar, y = paramVar),
-			if(!is.null(colorVar))	list(color = colorVar),
+			if(!is.null(colorVar))	list(fill = colorVar, color = colorVar),
 			if(!is.null(shapeVar))	list(shape = shapeVar)
 		)
 			
@@ -46,13 +49,25 @@ subjectProfileEventPlot <- function(
 			theme_bw() +
 			labs(title = title, x = xLab, y = yLab)
 		
-		# change name for color scale
-		if(!is.null(colorLab))
-			gg <- gg + scale_colour_discrete(name = colorLab)
+		# color palette and name for color legend
+		if(!is.null(colorVar)){
+			paramsScale <- list(
+				name = colorLab, 
+				values = colorPalette, drop = FALSE,
+				limits = names(colorPalette)
+			)
+			gg <- gg + 
+				do.call(scale_fill_manual, paramsScale) +
+				do.call(scale_color_manual, paramsScale)
+		}
 		
 		# change name for color scale
-		if(!is.null(shapeLab))
-			gg <- gg + scale_shape_discrete(name = shapeLab)
+		if(!is.null(shapeVar))
+			gg <- gg + scale_shape_manual(
+				name = shapeLab, 
+				values = shapePalette, drop = FALSE,
+				limits = names(shapePalette)
+			)
 		
 		if(!is.null(timeLim))
 			gg <- gg + coord_cartesian(xlim = timeLim)
